Thu May 13 11:45:02 CEST 2010  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Mon May 10 09:42:41 CEST 2010  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project.

Sun May  9 07:37:14 BST 2010  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.8-pre1.
	* release.sh: Remove man/po4a/po/man-db-manpages.pot before running
	  'make distcheck', to force it to be regenerated with the current
	  version number.
	* man/po4a/Makefile.am: Make po/man-db-manpages.pot depend on
	  update-po, rather than using dist-hook which is too late.
	* po/man-db.pot, po/*.po: Update.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.

Sat May  8 15:39:49 BST 2010  Colin Watson  <cjwatson@debian.org>

	* src/filenames.c (filename_info): Explicitly fail if the extension
	  is zero-length.

Sat May  8 15:35:17 BST 2010  Colin Watson  <cjwatson@debian.org>

	* src/filenames.c (filename_info): Allow section and extension to
	  differ as long as the first character is the same.  (This is my
	  understanding of what the code was originally meant to do, but it
	  only worked if the section was exactly one character long.)

Tue Apr 27 11:02:48 BST 2010  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20100424.

Fri Apr  2 20:44:11 BST 2010  Ville Skyttä  <ville.skytta@iki.fi>

	* configure.ac: Only test for lzma if xz is missing.  Add xz to list
	  of compressors checked when deciding whether to define COMP_CAT or
	  COMP_SRC.
	* include/comp_src.h.in (comp_list): If xz is available, use it for
	  .lzma files in preference.

Fri Apr  2 20:26:41 BST 2010  Ville Skyttä  <ville.skytta@iki.fi>

	* include/comp_src.h.in (comp_list): If compress is not available,
	  use gzip to handle .Z files.

Mon Mar 29 09:36:00 BST 2010  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Wed Mar 24 11:04:46 GMT 2010  Colin Watson  <cjwatson@debian.org>
