@@ -1,3 +1,10 @@
+Wed May 19 12:38:31 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/descriptions.c (parse_descriptions): Free record.
+	* src/encodings.c (check_preprocessor_encoding): Free directive.
+	  (manconv_stdin): Free p.
+	* src/lexgrog_test.c (main): Free lg.filters and lg.whatis.
+
 Thu May 13 11:45:02 CEST 2010  Clytie Siddall  <clytie@riverland.net.au>
 
 	* po/vi.po: Update from Translation Project.
